--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Displaying Blocks Assignment</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+    <div class="wrapper">
+        <div class=header>
+            <img class="headerImg" src="images/github.jpg" alt="Header Pic">
+            <h1>Display our blocks!</h1>
+            <img class="headerImg" src="images/catandninja.png" alt="Cat and Ninja">
+        </div>
+            <div class="body">
+                <img src="images/dojocat.jpg" alt="dojocat" class="blue">
+                <img src="images/heisencat.png" alt="heisencat" class="red">
+                <img src="images/linkcat.png" alt="linkcat" class="blue">
+                <img src="images/ironcat.png" alt="ironman" class="red">
+                <img src="images/defunktocat.png" alt="defunktocat" class="blue_end">
+                <img src="images/coder2.jpg" alt="coder2" class="blue">
+                <img src="images/riddlocat.png" alt="riddlocat" class="red">
+                <img src="images/chellocat.jpg" alt="chellocat" class="blue">
+                <img src="images/stormtroopocat.png" alt="stormtrooper" class="red">
+                <img src="images/visionary.jpg" alt="visionarycat" class="blue_end">
+                <img src="images/cherry.jpg" alt="cherry" class="blue">
+                <img src="images/oktobercat.png" alt="oktobercat" class="red">
+                <img src="images/mario.png" alt="mario" class="blue">
+                <img src="images/cooler.png" alt="cooler" class="red">
+                <img src="images/jean-luc-picat.jpg" alt="jeanlucpicat" class="blue_end">
+                <img src="images/aidorucat.png" alt="aidoru" class="blue">
+                <img src="images/domo-cat.png" alt="domo-cat" class="red">
+                <img src="images/kantana.jpg" alt="kantana" class="blue">
+                <img src="images/daftpunk.gif" alt="daftpunk" class="red">
+                <img src="images/codercat.jpg" alt="codercat" class="blue_end">
+            </div>
 
+    </div>
+</body>
+</html>
